<resources>
    <string name="app_name">Check-in</string>
    <string name="settings">Settings</string>
    <string name="action_change_language">Change Language</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="title_activity_my_history">My History</string>
    <string name="title_activity_coming_trips">ComingTrips</string>
    <string name="title_activity_add_cyclical_event">Add Cyclical Event</string>
    <string name="log_in">Check-in by</string>
    <string name="lang_pl">Polski</string>
    <string name="lang_en">English</string>
    <string name="event_name">Name</string>
    <string name="event_start">Start:</string>
    <string name="event_end">End:</string>
    <string name="event_radius">Radius:</string>
    <string name="event_default_radius">1</string>
    <string name="event_notification">Notification:</string>
    <string name="event_notification_start">Start:</string>
    <string name="event_notification_end">End:</string>
    <string name="event_date">Date</string>
    <string name="event_date_start">Start date:</string>
    <string name="event_date_end">End date:</string>
    <string name="event_time">Time</string>
    <string name="event_time_start">Start time:</string>
    <string name="event_time_end">End time:</string>
    <string name="event_localization">Localization:</string>
    <string name="event_localization_start">Location start:</string>
    <string name="event_localization_end">Location end:</string>
    <string name="event_automatic_notification">Automatic notification:</string>
    <string name="event_list_of_people">List of people</string>
    <string name="event_repetition">Repeat:</string>
    <string name="event_add">Add event</string>
    <string name="event_added">Event added:</string>
    <string name="event_edit">Edit event</string>
    <string name="main_menu">Menu główne</string>
    <string name="title_coming_trips">Your Coming Trips</string>
    <string name="scheduled_arrival">Scheduled arrival: </string>
    <string name="trip_finished">You reached Your destination!</string>
    <string name="trip_finish">Finish this trip</string>
    <string name="send_sms">I arrived! \n Send SMS</string>
    <string name="ignore">Ignore</string>
    <string name="people_to_inform">Send message to:</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="all">All</string>
    <string name="title_history">History</string>
    <string name="actual_event">Actual Event: </string>
    <string name="event_details">Event Details: </string>
    <string name="actual_event_estimated_time">Estimated arrival time:</string>
    <string name="title_activity_edit_event">Edit event</string>
    <string name="title_activity_menu">Main window</string>
    <string name="title_activity_add_people">Add people</string>
    <string name="title_activity_back">Back</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_add_contacts">AddContacts</string>
    <string name="title_activity_list_item_contacts">ListItemContacts</string>
    <string name="title_activity_list_item_event">ListItemEvent</string>
    <string name="title_activity_event_added">EventAdded</string>
    <string name="title_activity">EventAdded</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ready">Ready</string>
    <string-array name="radius_spinner">
        <item>200m</item>
        <item>500m</item>
        <item>1km</item>
        <item>2km</item>
        <item>5km</item>
    </string-array>
    <string name="title_activity_my_android_app">MyAndroidAppActivity</string>
    <string name="search_contact">Search contact...</string>
    <string name="pop_up_info_no_contacts">Select people You want to inform</string>
    <string name="pop_up_info_wrong_dates">Incorrect dates of event!</string>
    <string name="pop_up_info_no_days">Choose days!</string>
    <string name="user_profile">User profile</string>
    <string name="message_profile">Message</string>
    <string name="user_name_summary">User name (sender)</string>
    <string name="user_name">User name</string>
    <string name="user_number_summary">Choose number</string>
    <string name="user_number">User phone number</string>
    <string name="message_text">Message text</string>
    <string name="message_text_summary">I finished my trip.</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="monday">Mon.</string>
    <string name="tuesday">Tue.</string>
    <string name="wednesday">Wed.</string>
    <string name="thursday">Thu.</string>
    <string name="friday">Fri.</string>
    <string name="saturday">Sat.</string>
    <string name="sunday">Sun.</string>
    <string name="cancel">Cancel</string>

    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->


    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Wszedles do:</string>
    <string name="geofence_transition_exited">Opusciles:</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Nacisnij by wrocic do aplikacji</string>


</resources>
