<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.hp.firstapp2.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_changeLanguage"
        android:orderInCategory="1"
        android:title="@string/action_change_language"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/lang_pl"
                android:title="@string/lang_pl" />
            <item android:id="@+id/lang_en"
                android:title="@string/lang_en" />
        </menu>
    </item>
</menu>
