<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutAddCyclicalEvent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hp.firstapp2.AddCyclicalEvent"
    tools:showIn="@layout/activity_add_cyclical_event"
    >

    <Button
        android:id="@+id/btn_cancel_cyclical"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:width="250dp"
        android:background="@drawable/rounded_button_green"
        android:padding="5dp"
        android:text="@string/cancel"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_add_event_cyclical"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_above="@+id/btn_cancel_cyclical"
        android:layout_alignEnd="@+id/btn_cancel_cyclical"
        android:layout_alignLeft="@+id/btn_cancel_cyclical"
        android:layout_alignRight="@+id/btn_cancel_cyclical"
        android:layout_alignStart="@+id/btn_cancel_cyclical"
        android:layout_marginBottom="5dp"
        android:width="250dp"
        android:background="@drawable/rounded_button_primary"
        android:text="@string/ready"
        android:textColor="#FFFFFF" />


    <TextView
        android:id="@+id/textViewFrom"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/from"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textViewTo"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/to"
        android:layout_toRightOf="@+id/editTextFrom"
        />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextFrom"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_alignBottom="@+id/textViewFrom"
        android:layout_toRightOf="@+id/textViewFrom"
 />

    <EditText
        android:id="@+id/editTextTo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_toRightOf="@+id/textViewTo"
        android:layout_alignBottom="@+id/textViewTo" />

    <RelativeLayout
        android:id="@+id/relative_layout_cyclical_buttons_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTo"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        >

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="3dp"
            android:padding="2dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/circular_button_default"
            android:text="@string/monday"
            android:id="@+id/buttonMonday"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
             />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="3dp"
            android:padding="2dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/circular_button_default"
            android:text="@string/tuesday"
            android:id="@+id/buttonTuesday"
            android:layout_toRightOf="@id/buttonMonday"
            android:layout_alignTop="@id/buttonMonday"
            />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:background="@drawable/circular_button_default"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="3dp"
            android:padding="2dp"
            android:textColor="#FFFFFF"
            android:text="@string/wednesday"
            android:id="@+id/buttonWednesday"
            android:layout_toRightOf="@id/buttonTuesday"
            android:layout_alignTop="@id/buttonMonday"
            />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:background="@drawable/circular_button_default"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="3dp"
            android:padding="2dp"
            android:textColor="#FFFFFF"
            android:text="@string/thursday"
            android:id="@+id/buttonThursday"
            android:layout_toRightOf="@id/buttonWednesday"
            android:layout_alignTop="@id/buttonWednesday"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_cyclical_buttons_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_cyclical_buttons_1"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        >

        <Button
            style="?android:attr/buttonStyleSmall"
            android:background="@drawable/circular_button_default"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="3dp"
            android:padding="2dp"
            android:textColor="#FFFFFF"
            android:text="@string/friday"
            android:id="@+id/buttonFriday"/>


        <Button
            style="?android:attr/buttonStyleSmall"
            android:background="@drawable/circular_button_default"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="3dp"
            android:padding="2dp"
            android:textColor="#FFFFFF"
            android:text="@string/saturday"
            android:id="@+id/buttonSaturday"
            android:layout_toRightOf="@id/buttonFriday"
            android:layout_alignTop="@id/buttonFriday"
            />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:background="@drawable/circular_button_default"
            android:elevation="2dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="3dp"
            android:padding="2dp"
            android:textColor="#FFFFFF"
            android:text="@string/sunday"
            android:id="@+id/buttonSunday"
            android:layout_toRightOf="@id/buttonSaturday"
            android:layout_alignTop="@id/buttonFriday"
            />

    </RelativeLayout>

</RelativeLayout>
