<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hp.firstapp2.EventDetails">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="124dp"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:layout_weight="0.07">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_localization"
                    android:id="@+id/textView7"
                    android:padding="5dp"
                    android:textColor="#6d93ed"
                    android:textStyle="bold"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_radius"
                    android:id="@+id/textView4"
                    android:padding="5dp"
                    android:textColor="#6d93ed"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:paddingBottom="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_date_start"
                    android:id="@+id/textView6"
                    android:padding="5dp"
                    android:textColor="#6d93ed"
                    android:textStyle="bold"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:text="@string/event_date_end"
                    android:padding="5dp"
                    android:textColor="#6d93ed"
                    android:textStyle="bold"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_time_start"
                    android:id="@+id/textView9"
                    android:padding="5dp"
                    android:textColor="#6d93ed"
                    android:textStyle="bold"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_time_end"
                    android:id="@+id/textView3"
                    android:padding="5dp"
                    android:textColor="#6d93ed"
                    android:textStyle="bold"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_automatic_notification"
                    android:id="@+id/textView15"
                    android:padding="5dp"
                    android:textColor="#6d93ed"
                    android:textStyle="bold"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_notification_start"
                    android:id="@+id/textView16"
                    android:padding="5dp"
                    android:textColor="#6d93ed"
                    android:textStyle="bold"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_notification_end"
                    android:id="@+id/textView17"
                    android:padding="5dp"
                    android:textColor="#6d93ed"
                    android:textStyle="bold"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_repetition"
                    android:id="@+id/textView18"
                    android:padding="5dp"
                    android:textColor="#6d93ed"
                    android:textStyle="bold"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:text="loc"
                    android:id="@+id/txt_details_localization"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="radius"
                    android:id="@+id/txt_details_radius"
                    android:padding="5dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="data start"
                    android:id="@+id/txt_details_data_start"
                    android:padding="5dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="data end"
                    android:id="@+id/txt_details_data_end"
                    android:padding="5dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="time start"
                    android:id="@+id/txt_details_time_start"
                    android:padding="5dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="time end"
                    android:id="@+id/txt_details_time_end"
                    android:padding="5dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="auto not"
                    android:id="@+id/txt_details_auto_notifications"
                    android:padding="5dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="notif start"
                    android:id="@+id/txt_details_notification_start"
                    android:padding="5dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="not end"
                    android:id="@+id/txt_details_notification_end"
                    android:padding="5dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="repetition"
                    android:id="@+id/txt_details_repetition"
                    android:padding="5dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
